--- a/lib/srv/desktop/rdp/rdpclient/testclient/index.html
+++ b/lib/srv/desktop/rdp/rdpclient/testclient/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div>
+	<div id="controls">
 		<button id="button-start">connect</button>
 	</div>
   <canvas id="canvas"></div>
